--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
+  },
+  "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.7.0"
   }
 }
